style.css
:root {
    --primary : #F1EEE9;
    --secondary: #E7DFD2;
    --tertiary: #3F1E1F;
}

::selection {
    background-color: var(--tertiary);
    color:white;
}

* {
    margin:0;
    padding:0;
    font-family: Lora, serif;
    scroll-behavior: smooth;
}

body {
    overflow-x: hidden;
}

.menu-screen {
    height:100%;
    width: 100%;
    padding: 80px;
    position: fixed;
    top:0px;
    left:0px;
    z-index: 3;
    background-color:var(--primary);
    opacity: 0;
    top:100vh;
    display: flex;
    align-items: center;
    justify-content: left;
}

.share-button {
    background-color: #3C3737;
    height: 42px;
    width: 120px;
    border-radius: 5px;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: 0.3s;
}

.share-button:hover {
    background-color:#625757;
}

.menu-button {
    position: absolute;
    left: 60px;
    top: 35px;
    height: 50;
    width: 50;
    z-index: 1;
    cursor: pointer;
    transition: 0.3s;
}

.menu-button:active {
    border-radius: 50%;
}

.menu-button:active #menu {
    fill: var(--secondary);
}

#menu {
    fill: white;
    transition: 0.3s;
}

#fade {
	opacity: 0;
    display: flex;
	flex-direction: row;
	justify-content: center;
	align-items:center;
}

a {
    height:20%;width:200px;
    background-position: center;
    background-size: contain;
    background-repeat: no-repeat;
    text-decoration: none;
}

ul {
    position: relative;
    height:auto;
    width:100%;
    margin:auto;
}

li {
    font-size: 1em;
    color: var(--tertiary);
    background-color: transparent;
    width:50%;
    height:40px;
    list-style: none;
    display: flex;
    align-items: center;
    justify-content: center;
    padding:10px;
    border-radius: 10px;
    transition:0.3s;
    background-size:contain;
    background-position:right;
    background-repeat: no-repeat;
}

li:hover {
    background-color: var(--secondary);
    background-image: url('images/arrow.svg');
}

.banner {
	position: fixed;
	width: auto;
	bottom: 0;
    width:100%;
	z-index: 3;
}

.banner, #fade {
    height: 120px;;
}

.logo {
    width: 25%;
    height: 25%;
    background-image:url('images/logo.svg');
    background-size:contain;
    background-repeat: no-repeat;
    background-position:center;
    position: relative;
    margin:auto;
}

.clouds {
    position: absolute;
    height:25vh;
    top:25vh;
    width: 200vw;
    background-image:url('images/clouds.svg');
    background-repeat:repeat-x;
    background-size:contain;
}

.hero {
    background-image:url('images/hero.svg');
    background-size:contain;
    background-position: top;
    background-repeat: repeat-x;
    height: 100vh;
    margin-bottom: 200px;
    width: auto;
    margin-bottom: 100px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.arrow {
	position: absolute;
    height: 42px;
    width: 42px;
    stroke:var(--tertiary);
    animation: point 2s infinite;
}

@keyframes point {
    from {
        margin-top: 0;
        opacity:1;
    }
    to {
        margin-top: 64px;
        opacity: 0;
    }
}

#no-border {
    border:none;
}

.text-block {
    padding:80px;
}

.site-link {
    background-image: url('images/site_link.svg');
    background-size:contain;
    background-repeat:no-repeat;
    height:36px;
    width:36px;
    margin-right: 40px;
}

h1 {
    text-align: center;
    position: absolute;
    margin:auto;
    color: var(--tertiary);
    font-size: 3em;
    z-index: 2;
}

.title-block {
    height: 400px;
    width: 50%;
    border-radius: 20px;
    border: 1px solid var(--tertiary);
    margin:auto;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    flex-direction: row-reverse;
    flex-shrink: 0;
    flex-grow: 0;
    padding: 20px;
}

.illust {
    height: 150%;
    width: 150%;
    position: relative;
    top: -100px;
    left: -25vw;
    background-repeat: no-repeat;
    background-position: center;
    background-size: contain;
    z-index: 1;
}

.info-block {
    font-size: 1em;
    line-height: 150%;
    display:flex;
    align-items: center;
    justify-content: center;
    background-color: var(--primary);
    height: auto;
    width: 50%;
    border-radius: 20px;
    margin: auto ;
    padding: 20px;
}

.block {
    border: 2px solid var(--secondary);
    text-align: center;
    text-justify: center;
    line-height: 30px;
    border-radius: 5px;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: 0.3s;
}

.block-text {
    text-align: center;
    margin:auto;
    pointer-events:none;
}

.size-chart {
    font-size: 1em;
    font-family: Lora, serif;
    width: 50%;
    height: auto;
    margin: auto;
    padding: 20px;
    grid-gap: 40px;
    border: 2px solid var(--secondary);
    border-radius: 20px;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-areas: "s m";
}

.measurements {
    height: auto;
    width: 100%;
    grid-area: m;
    display: grid;
    grid-gap: 10px;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: repeat(14, 1fr);
    grid-template-areas: 
        "men women women"
        "m-s w-s ."
        "m-s w-s w-sm"
        "m-s w-s w-sm"
        "m-m w-s w-sm"
        "m-m w-m w-ml"
        "m-m w-m w-ml"
        "m-l w-l ."
        "m-l w-l ."
        "m-xl w-xl ."
        "m-xl w-xl ."
        "m-xxl w-xxl ."
        "m-xxl w-xxl ."
        "m-xxl w-xxl .";
}

.sizes {
    height: auto;
    width: 100%;
    grid-area: s;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: repeat(14,1fr);
    grid-template-areas: 
        "us inches"
        "chart chart"
        "chart chart"
        "chart chart"
        "chart chart"
        "chart chart"
        "chart chart"
        "chart chart"
        "chart chart"
        "chart chart"
        "chart chart"
        "chart chart"
        "chart chart"
        "chart chart";
}

.chart {
    height:auto;
    width:100%;
    box-shadow:0px 0px 0px 2px var(--secondary) inset;
    border-radius: 5px;
    grid-area: chart;
    display:grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: repeat(13, 1fr);
}

.links {
    display: flex;justify-content:center;align-items:center;position: absolute;top:60px;right:60px;
}

.title-block, .info-block, .size-chart {
    margin-bottom: 200px;
}

@media (max-width:1024px) {
    ul {
        width: 100%;
        margin:40px;
    }
    li {
        width: auto;
    }
    .menu-screen {
        padding:0px;
    }
}

@media (pointer: coarse) {
    .hero {
        background-size:cover;
        background-position:center;
    }
    #hat2 {
        display: none;
    }
    .site-link {
        height: 72px;
        width: 72px;
    }
    .links {
        top:96px;
        right: 96px;
    }
    .share-button {
        font-size: 2em;
        height: 72px;
        border-radius: 20px;
    }
    .menu-button {
        height: 100px;
        width: 100px;
        top: 50px;
    }
    .banner,#fade {
        height: 200px;
    }
    .logo {
        width: 50%;
    }
    .title-block {
        border-width: 2;
    }
    .title-block,.info-block,.size-chart {
        width: 90%;
    }
    .info-block {
        font-size: 2em;
    }
    .size-chart {
        font-size:2em;
    }
    .block {
        border-width: 2px;
        padding: 20px;
    }
    .clouds {
        display: none;
    }
    .menu-screen {
        padding:0;
    }
    li {
        width:auto;
        font-size: 2em;
        padding-top: 40px;
        padding-bottom: 40px;
    }
}

